# raytracing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
RayTracing/: imgui.ini  premake5.lua
RayTracing/src/: Camera.cpp  Ray.h  RayTracing.cpp  Renderer.cpp  Renderer.h  Scene.h
scripts/: Setup.bat
